patching a sizing issue on mobile

--- a/src/pages/About.scss
+++ b/src/pages/About.scss
@@ -66,13 +66,13 @@
     align-items: center;
     justify-content: center;
     padding: 0 $scale-md;
+    min-height: $scale-root;
     min-width: $scale-root;
 
     svg,
     img {
       height: auto;
       width: auto;
-      min-width: $scale-root;
     }
   }
 
